--- a/hello-impl/src/main/resources/application.conf
+++ b/hello-impl/src/main/resources/application.conf
@@ -1,45 +1,35 @@
 #
 #
 play.application.loader = org.example.hello.impl.HelloLoader
-
-# The properties below override Lagom default configuration with the recommended values for new projects.
-#
-# Lagom has not yet made these settings the defaults for backward-compatibility reasons.
-
-# Prefer 'ddata' over 'persistence' to share cluster sharding state for new projects.
-# See https://doc.akka.io/docs/akka/current/cluster-sharding.html#distributed-data-vs-persistence-mode
 akka.cluster.sharding.state-store-mode = ddata
 
-# Enable the serializer provided in Akka 2.5.8+ for akka.Done and other internal
-# messages to avoid the use of Java serialization.
 akka.actor.serialization-bindings {
   "akka.Done"                 = akka-misc
   "akka.actor.Address"        = akka-misc
   "akka.remote.UniqueAddress" = akka-misc
 }
 
-db.default {
-  url = "jdbc:mysql://127.0.0.1:3306/example"
-  url = ${?JDBC_URL}
+play.http.secret.key = "pdEf9AikkWX63vb/HyN2myQMG6we92VUl3av/+LWkww="
+akka.http.routing.decode-max-size = 8m
 
-  username = "root"
-  username = ${?JDBC_USER}
-
-  password = "example"
-  password = ${?JDBC_PASS}
+hello {
+  service-name = "hello"
 }
 
-jdbc-defaults.slick.profile = "slick.jdbc.MySQLProfile$"
-
-lagom.persistence.jdbc {
-  create-tables {
-    auto = true
-    timeout = 5s
-    run-on-role = ""
-    failure-exponential-backoff {
-      min = 3s
-      max = 30s
-      random-factor = 0.2
-    }
-  }
+cassandra-journal {
+  keyspace = ${hello.service-name}
+  pubsub-minimum-interval = 100ms
 }
+
+cassandra-query-journal {
+  eventual-consistency-delay = 0
+  delayed-event-timeout = 10s
+}
+
+cassandra-snapshot-store {
+  keyspace = ${hello.service-name}
+}
+
+lagom.persistence.read-side.service-name = ${hello.service-name}
+
+akka.actor.enable-additional-serialization-bindings = on
