--- a/hello-impl/src/main/resources/application.conf
+++ b/hello-impl/src/main/resources/application.conf
@@ -18,12 +18,17 @@ hello {
 
 cassandra-journal {
   keyspace = ${hello.service-name}
-  pubsub-minimum-interval = 100ms
+  pubsub-notification = on
 }
 
 cassandra-query-journal {
-  eventual-consistency-delay = 0
-  delayed-event-timeout = 10s
+  refresh-interval = 200ms
+  first-time-bucket = "20160225T00:00"
+
+  events-by-tag {
+    gap-timeout = 10s
+    eventual-consistency-delay = 0s
+  }
 }
 
 cassandra-snapshot-store {
